--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -3,29 +3,33 @@ platform: ${MAESTRO_PLATFORM}
 ---
 - openLink: betterangels-dev://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}%26disableOnboarding%3D1
 
-- runFlow:
-    when:
-      visible: 'There was a problem loading'
+# Loop until Better Angels appears or max 10 attempts; kill/relaunch if Reload is seen
+- evalScript: ${output.counter = 0}
+- repeat:
+    while:
+      true: ${output.counter < 10}
+      notVisible: 'Better Angels'
     commands:
-      - repeat:
-          times: 10
+      - extendedWaitUntil:
+          visible: 'Reload'
+          timeout: 1000
+          optional: true
+      - runFlow:
+          when:
+            visible: 'Reload'
           commands:
             - takeScreenshot: error-restart-kill
             - killApp: la.betterangels.dev.app
             - waitForAnimationToEnd
             - openLink: betterangels-dev://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}%26disableOnboarding%3D1
             - waitForAnimationToEnd
-            - extendedWaitUntil:
-                visible: 'Better Angels'
-                timeout: 5000
-                optional: true
-
-- runFlow:
-    when:
-      platform: ios
-      visible: 'Open'
-    commands:
-      - tapOn: 'Open'
+      - runFlow:
+          when:
+            platform: ios
+            visible: 'Open'
+          commands:
+            - tapOn: 'Open'
+      - evalScript: ${output.counter = output.counter + 1}
 
 - assertVisible: 'Better Angels'
 - assertVisible: 'HMIS'
