--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -19,7 +19,7 @@ platform: ${MAESTRO_PLATFORM}
             visible: 'Reload'
           commands:
             - takeScreenshot: error-restart-kill
-            - killApp: la.betterangels.dev.app
+            - killApp
             - openLink: betterangels-dev://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}%26disableOnboarding%3D1
       - runFlow:
           when:
