--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,9 @@
       "@monorepo/react/icons": ["libs/react/icons/src/index.ts"],
       "@monorepo/react/shared": ["libs/react/shared/src/index.ts"],
       "@monorepo/react/shelter": ["libs/react/shelter/src/index.ts"],
+      "@monorepo/react/shelter-operator": [
+        "libs/react/shelter-operator/src/index.ts"
+      ],
       "@monorepo/react/storybook": ["libs/react/storybook/src/index.ts"]
     }
   },
