--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -102,7 +102,8 @@
     "react-native-mmkv": "*",
     "jotai-family": "*",
     "rxjs": "*",
-    "set-cookie-parser": "*"
+    "set-cookie-parser": "*",
+    "@types/set-cookie-parser": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
